[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/GameOverHUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/font/THSarabunNew.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

size = 64
use_mipmaps = false
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 128
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="GameOverHUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="restartBtn" type="Button" parent="." index="0"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -324.0
margin_top = -115.0
margin_right = -24.0
margin_bottom = -15.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Restart"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="backtomainBtn" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 22.0
margin_top = -115.0
margin_right = 326.0
margin_bottom = -13.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Menu"
flat = false
align = 1
_sections_unfolded = [ "Hint", "Margin", "Rect", "custom_fonts" ]

[node name="gameOver" type="Label" parent="." index="2"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.0
margin_top = -84.0
margin_right = 227.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "GAME OVER"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="restartBtn" to="." method="_on_restartBtn_pressed"]

[connection signal="pressed" from="backtomainBtn" to="." method="_on_backtomainBtn_pressed"]


